# autolabel

./: .gitignore  .gitmodules  .yapf.vim  LICENSE  README.md  backend.py  compute_transform.py  constants.py  dataset.py  evaluation.py  main.py  setup.cfg  setup.py  train.py  trainer.py
autolabel/: backend.py  constants.py  dataset.py  evaluation.py  model_utils.py  models.py  trainer.py  undistort.py  utils.py  visualization.py
autolabel/features/: __init__.py  dino.py  fcn50.py  lseg.py
autolabel/ui/: canvas.py
autolabel/utils/: __init__.py  feature_utils.py
configs/: scannet_mapping.json
docs/: data.md  vision-language.md
ops/maplab/: Dockerfile  README.md  convert_to_autolabel.py  create_rosbag.py  install.sh  map.sh  maplab_console_script.yaml  run.sh  run_rovioli.sh  sensors.yaml  setup-ubuntu.sh
scripts/: compute_feature_maps.py  compute_scene_bounds.py  convert_arkitscenes.py  convert_replica.py  convert_scanner.py  convert_scannet.py  convert_to_instant_ngp.py  evaluate.py  export.py  gui.py  main.py  mapping.py  render.py  simulate_user.py  train.py
scripts/language/: evaluate.py  pointcloud.py
scripts/ros/: class_input.py  node.py
test/: test_sampling.py
ui/: canvas.py
