[metadata]
name = autolabel
version = 0.1
description = A project for inferring the structure and semantics of scenes.
license = MIT License

[options]
packages = autolabel
install_requires =
    rich
    numpy
    pillow
    tqdm
    tensorboardX
    opencv-python
    open3d
    torch
    torch_ngp
    trimesh
    matplotlib
    scipy
    PyQt5
