[metadata]
name = autolabel
version = 0.1
description = A project for inferring the structure and semantics of scenes.
license = MIT License

[options]
packages = autolabel
install_requires =
    rich
    numpy
    pillow
    tqdm
    tensorboardX
    opencv-python
    open3d
    torch
    torch_ngp
    trimesh
    matplotlib
    scipy
    PyQt6
    numba
    scikit-video
    scikit-image

[yapf]
based_on_style = google
indent_width = 4
column_limit = 80
